release 3.0
